# Zorro

./: pyproject.toml  requirements.txt
childes_treebank/: brown-eve+animacy+theta.parsed
data/legal_words/: VB_goes_with_for.txt  VB_not_go_with_from.txt  adj_goes_with_girl.txt  animates.txt  humanity.txt  legal_adjectives.txt  legal_nouns.txt  legal_verbs.txt  name_of_place.txt  noun_followed_by_about.txt  nouns_adj_pair_in_cds.txt  nouns_followed_by_for.txt  nouns_followed_by_from.txt  nouns_followed_by_from_and_by_in.txt  nouns_followed_by_in.txt  nouns_followed_by_to_and_by_for.txt  verbs_followed_by_for_but_not_by_to.txt  verbs_followed_by_from.txt  verbs_followed_by_in.txt  verbs_followed_by_in_but_not_by_from.txt  verbs_nouns_pair.txt
scripts/: childes_corpus_extract.py  get_cooccurence.py  make_sentences.py
scripts/utils/: flatten.py
sentences/babyberta/: definate_article-definate_article.txt  extraction_out_of_a_NP-extraction_out_of_a_NP.txt  left_branch_extraction_out_of_a_nominal_phrase-left_branch_extraction_out_of_a_nominal_phrase.txt
utils/: read.py  tree.py
zorro/: balance_in_aochildes.py  configs.py  make_verb_noun_dict.py  utils.py  words.py
zorro/definate_article/: definate_article.py
zorro/extraction_out_of_a_NP/: extraction_out_of_a_NP.py
zorro/left_branch_extraction_out_of_a_nominal_phrase/: left_branch_extraction_out_of_a_nominal_phrase.py
